@@ -4,12 +4,14 @@ module Gecode
     def must
       Gecode::Constraints::Int::Expression.new(active_space, self)
     end
+    alias_method :must_be, :must
     
     # Specifies that the negation of a constraint must hold for the integer 
     # variable.
     def must_not
       Gecode::Constraints::Int::Expression.new(active_space, self, true)
     end
+    alias_method :must_not_be, :must_not
   end
   
   # A module containing constraints that have int variables as left hand side
